# public

./: .arxiv_collection.kate-swp  .arxiv_feed.kate-swp  .cdTimer.sh.kate-swp  .do_it_later.kate-swp  .food_collection.kate-swp  .gitignore  .scrap.txt.kate-swp  .temp_220.txt.kate-swp  LR.sh  LR_in  LR_nn_out  LR_plot.py  Paper_To_Read  Paper_To_Read_277  RL_gb.py  arxiv_collect.html  arxiv_collection  arxiv_collection2  arxiv_feed  cdTimer.sh  course_websites  courses  cube.py  do_it_later  feed.py  feed_local_test.py  feed_test.py  food_collection  gen_func.py  improvement  sandbox.sh  scan.sh  scholar.py  scrap.html  scrap.txt  site.py  snip.sh  sync.sh  task.txt  temp_220.txt  (+2 more)
Rent_Utility/: rent.py  rent.txt
cdTimer_widget/package/: .metadata.desktop.kate-swp
org.cdTimer/: metadata.desktop
textbooks/: (Graduate Texts in Mathematics) John B. Conway - Functions of one complex variable-Springer (1995).djvu
trash/: analysis.txt  init.sh  mae3_script  random.py  random2.py  shs  test.txt
trash/123_construction/: 4.txt  CustomRules.cs  construction  default.txt  enforceTimer.sh  improvement  init.sh  mitmproxy_config.py  recover.sh  root_setup.sh  siteFilter.txt  startup.sh  sync.sh  update.sh  user_startup.sh
trash/proxy_code/transproxy/: CMakeLists.txt  main.cpp  temp.cpp
trash/proxy_code/transproxy_c/: CMakeLists.txt  main.c  main.h  mitm_new_record  mitmproxy record  packet_analysis  temp.c
trash/proxy_code/transproxy_c/mitmproxy-master/mitmproxy/proxy/protocol/: http2.py
trash/proxy_code/transproxy_c/mitmproxy-master/mitmproxy/tools/: _main.py
(+66 files in other folders)
